@@ -7,27 +7,27 @@ import com.exchangediary.diary.domain.DiaryContentRepository;
 import com.exchangediary.diary.domain.DiaryRepository;
 import com.exchangediary.diary.domain.entity.Diary;
 import com.exchangediary.diary.domain.entity.DiaryContent;
+import com.exchangediary.diary.ui.dto.response.DiaryContentResponse;
 import com.exchangediary.diary.ui.dto.response.DiaryResponse;
-import com.exchangediary.group.domain.GroupRepository;
 import com.exchangediary.group.domain.entity.Group;
-import com.exchangediary.member.domain.entity.Member;
-import com.exchangediary.member.domain.enums.GroupRole;
+import com.exchangediary.group.domain.entity.GroupMember;
+import com.exchangediary.group.domain.enums.GroupRole;
 import io.restassured.RestAssured;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class DiaryViewApiTest extends ApiBaseTest {
-    private static final String API_PATH = "/api/groups/%s/diaries/%d";
-    @Autowired
-    private GroupRepository groupRepository;
+    private static final String URI = "/api/groups/%s/diaries/%d";
+    private static final String TODAY_MOOD = "happy.png";
+
     @Autowired
     private DiaryRepository diaryRepository;
     @Autowired
@@ -36,200 +36,114 @@ public class DiaryViewApiTest extends ApiBaseTest {
     private CommentRepository commentRepository;
 
     @Test
-    void 일기_조회_성공() {
+    @DisplayName("댓글이 없는 경우 일기 조회에 성공한다.")
+    void When_NotIncludeComment_Expect_SuccessViewDiary() {
+        // Given
         Group group = createGroup();
-        this.member.joinGroup("self", "red", 1, GroupRole.GROUP_MEMBER, group);
-        this.member.updateLastViewableDiaryDate();
-        memberRepository.save(member);
-        Member diaryCreator = createMember(group);
-        Diary diary = createDiary(diaryCreator, group);
-        createDiaryContent(diary);
-        createComment(member, diary);
+        GroupMember groupMember = joinGroup("스프링", 0, GroupRole.GROUP_LEADER, group, member);
+        groupMember.updateLastViewableDiaryDate();
+        groupMemberRepository.save(groupMember);
 
-        var response = RestAssured
+        List<String> contents = List.of("오늘의", "날씨", "맑음", ":)");
+        Diary diary = writeDiary(groupMember, group, contents);
+
+        // When
+        DiaryResponse response = RestAssured
                 .given().log().all()
                 .cookie("token", token)
-                .when().get(String.format(API_PATH, group.getId(), diary.getId()))
+                .when().get(String.format(URI, group.getId(), diary.getId()))
                 .then().log().all()
                 .statusCode(HttpStatus.OK.value())
                 .extract().as(DiaryResponse.class);
-        var diaryContents = response.contents();
-        var diaryComments = response.comments();
 
-        assertThat(diaryContents).hasSize(3);
-        assertThat(diaryContents.get(0).content()).isEqualTo("0");
-        assertThat(diaryContents.get(1).content()).isEqualTo("1");
-        assertThat(diaryContents.get(2).content()).isEqualTo("2");
+
+        // Then
         assertThat(response.createdAt()).isEqualTo(LocalDate.now().format(DateTimeFormatter.ofPattern("yyyy.MM.dd")));
-        assertThat(response.todayMood()).isEqualTo("sleepy");
-        assertThat(response.imageFileName()).isEqualTo("20241101.jpeg");
-        assertThat(response.nickname()).isEqualTo("하니");
-        assertThat(response.profileImage()).isEqualTo("orange");
-        assertThat(diaryComments.getFirst().page()).isEqualTo(1);
-        assertThat(diaryComments.getFirst().xCoordinate()).isEqualTo(123.45);
-        assertThat(diaryComments.getFirst().yCoordinate()).isEqualTo(333.33);
-        assertThat(diaryComments.getFirst().profileImage()).isEqualTo("red");
+        assertThat(response.todayMood()).isEqualTo(TODAY_MOOD);
+        assertThat(response.imageFileName()).isNull();
+        assertThat(response.nickname()).isEqualTo("스프링");
+        assertThat(response.profileImage()).isEqualTo(PROFILE_IMAGES[0]);
+        assertThat(response.comments()).hasSize(0);
+
+        List<DiaryContentResponse> diaryContents = response.contents();
+        assertThat(diaryContents).hasSize(4);
+        assertThat(diaryContents.get(0).content()).isEqualTo(contents.get(0));
+        assertThat(diaryContents.get(1).content()).isEqualTo(contents.get(1));
+        assertThat(diaryContents.get(2).content()).isEqualTo(contents.get(2));
+        assertThat(diaryContents.get(3).content()).isEqualTo(contents.get(3));
     }
 
     @Test
-    void 일기_조회_성공_댓글_없을_경우() {
+    @DisplayName("댓글이 있는 경우 일기 조회에 성공한다.")
+    void When_IncludeComment_Expect_SuccessViewDiary() {
+        // Given
         Group group = createGroup();
-        this.member.joinGroup("self", "red", 1, GroupRole.GROUP_MEMBER, group);
-        this.member.updateLastViewableDiaryDate();
-        memberRepository.save(member);
-        Member diaryCreator = createMember(group);
-        Diary diary = createDiary(diaryCreator, group);
-        createDiaryContent(diary);
+        GroupMember groupMember = joinGroup("스프링", 0, GroupRole.GROUP_LEADER, group, member);
+        groupMember.updateLastViewableDiaryDate();
+        groupMemberRepository.save(groupMember);
 
-        var response = RestAssured
+        List<String> contents = List.of("오늘의", "날씨", "맑음", ":)");
+        Diary diary = writeDiary(groupMember, group, contents);
+        createComment(10, 10, 1, "첫번째 댓글", groupMember, diary);
+        createComment(20, 20, 2, "두번째 댓글", groupMember, diary);
+
+        // When
+        DiaryResponse response = RestAssured
                 .given().log().all()
                 .cookie("token", token)
-                .when().get(String.format(API_PATH, group.getId(), diary.getId()))
+                .when().get(String.format(URI, group.getId(), diary.getId()))
                 .then().log().all()
                 .statusCode(HttpStatus.OK.value())
                 .extract().as(DiaryResponse.class);
-        var diaryContents = response.contents();
-        var diaryComments = response.comments();
 
-        assertThat(diaryContents).hasSize(3);
-        assertThat(diaryContents.get(0).content()).isEqualTo("0");
-        assertThat(diaryContents.get(1).content()).isEqualTo("1");
-        assertThat(diaryContents.get(2).content()).isEqualTo("2");
+        // Then
         assertThat(response.createdAt()).isEqualTo(LocalDate.now().format(DateTimeFormatter.ofPattern("yyyy.MM.dd")));
-        assertThat(response.todayMood()).isEqualTo("sleepy");
-        assertThat(response.imageFileName()).isEqualTo("20241101.jpeg");
-        assertThat(response.nickname()).isEqualTo("하니");
-        assertThat(response.profileImage()).isEqualTo("orange");
-        assertThat(diaryComments).isEmpty();
+        assertThat(response.todayMood()).isEqualTo(TODAY_MOOD);
+        assertThat(response.imageFileName()).isNull();
+        assertThat(response.nickname()).isEqualTo("스프링");
+        assertThat(response.profileImage()).isEqualTo(PROFILE_IMAGES[0]);
+        assertThat(response.comments()).hasSize(2);
+
+        List<DiaryContentResponse> diaryContents = response.contents();
+        assertThat(diaryContents).hasSize(4);
+        assertThat(diaryContents.get(0).content()).isEqualTo(contents.get(0));
+        assertThat(diaryContents.get(1).content()).isEqualTo(contents.get(1));
+        assertThat(diaryContents.get(2).content()).isEqualTo(contents.get(2));
+        assertThat(diaryContents.get(3).content()).isEqualTo(contents.get(3));
     }
 
     @Test
-    void 일기_조회_성공_댓글_여러개() {
+    @DisplayName("id에 해당하는 일기 없는 경우, 404 예외를 반환한다.")
+    void When_NonExistentDiaryMappingId_Expect_Throw404Exception() {
+        // Given
         Group group = createGroup();
-        this.member.joinGroup("self", "red", 1, GroupRole.GROUP_MEMBER, group);
-        this.member.updateLastViewableDiaryDate();
-        memberRepository.save(member);
-        Member diaryCreator = createMember(group);
-        Member commentCreator = createMember(group);
-        Diary diary = createDiary(diaryCreator, group);
-        createDiaryContent(diary);
-        createComment(member, diary);
-        createComment(commentCreator, diary);
+        joinGroup("스프링", 0, GroupRole.GROUP_LEADER, group, member);
 
-        var response = RestAssured
-                .given().log().all()
-                .cookie("token", token)
-                .when().get(String.format(API_PATH, group.getId(), diary.getId()))
-                .then().log().all()
-                .statusCode(HttpStatus.OK.value())
-                .extract().as(DiaryResponse.class);
-        var diaryContents = response.contents();
-        var diaryComments = response.comments();
-
-        assertThat(diaryContents).hasSize(3);
-        assertThat(diaryContents.get(0).content()).isEqualTo("0");
-        assertThat(diaryContents.get(1).content()).isEqualTo("1");
-        assertThat(diaryContents.get(2).content()).isEqualTo("2");
-        assertThat(response.createdAt()).isEqualTo(
-                LocalDate.now().format(DateTimeFormatter.ofPattern("yyyy.MM.dd")));
-        assertThat(response.todayMood()).isEqualTo("sleepy");
-        assertThat(response.imageFileName()).isEqualTo("20241101.jpeg");
-        assertThat(response.nickname()).isEqualTo("하니");
-        assertThat(response.profileImage()).isEqualTo("orange");
-        assertThat(diaryComments.getFirst().page()).isEqualTo(1);
-        assertThat(diaryComments.getFirst().xCoordinate()).isEqualTo(123.45);
-        assertThat(diaryComments.getFirst().yCoordinate()).isEqualTo(333.33);
-        assertThat(diaryComments.getFirst().profileImage()).isEqualTo("red");
-        assertThat(diaryComments.get(1).page()).isEqualTo(1);
-        assertThat(diaryComments.get(1).xCoordinate()).isEqualTo(123.45);
-        assertThat(diaryComments.get(1).yCoordinate()).isEqualTo(333.33);
-        assertThat(diaryComments.get(1).profileImage()).isEqualTo("orange");
-    }
-
-    @Test
-    void 일기_조회_실패_일기_없음 () {
-        Group group = createGroup();
-        this.member.joinGroup("self", "red", 1, GroupRole.GROUP_MEMBER, group);
-        this.member.updateLastViewableDiaryDate();
-        memberRepository.save(member);
         Long diaryId = 1L;
 
+        // When & Then
         RestAssured
                 .given().log().all()
                 .cookie("token", token)
                 .redirects().follow(false)
-                .when().get(String.format(API_PATH, group.getId(), diaryId))
+                .when().get(String.format(URI, group.getId(), diaryId))
                 .then().log().all()
                 .statusCode(HttpStatus.NOT_FOUND.value());
     }
 
-    @Test
-    void 일기_조회_인가_실패() {
-        Group group = createGroup();
-        this.member.joinGroup("self", "red", 1, GroupRole.GROUP_MEMBER, group);
-        memberRepository.save(member);
-        Member diaryCreator = createMember(group);
-        Diary diary = createDiary(diaryCreator, group);
-        createDiaryContent(diary);
-
-        RestAssured
-                .given().log().all()
-                .cookie("token", token)
-                .redirects().follow(false)
-                .when().get(String.format(API_PATH, group.getId(), diary.getId()))
-                .then().log().all()
-                .statusCode(HttpStatus.FORBIDDEN.value());
-    }
-
-    private Group createGroup() {
-        return groupRepository.save(Group.from("GROUP_NAME"));
-    }
-
-    private Diary createDiary(Member member, Group group) {
-        Diary diary = Diary.builder()
-                .todayMood("sleepy")
-                .imageFileName("20241101.jpeg")
-                .group(group)
-                .member(member)
-                .build();
+    private Diary writeDiary(GroupMember groupMember, Group group, List<String> contents) {
+        Diary diary = Diary.of(TODAY_MOOD, groupMember, group);
         diaryRepository.save(diary);
+
+        for (int idx = 0; idx < contents.size(); idx++) {
+            DiaryContent diaryContent = DiaryContent.of(idx + 1, contents.get(idx), diary);
+            diaryContentRepository.save(diaryContent);
+        }
         return diary;
     }
 
-    private Member createMember(Group group) {
-        Member member = Member.builder()
-                .profileImage("orange")
-                .kakaoId(1234L)
-                .orderInGroup(2)
-                .nickname("하니")
-                .groupRole(GroupRole.GROUP_MEMBER)
-                .group(group)
-                .build();
-        memberRepository.save(member);
-        return member;
-    }
-
-    private void createDiaryContent(Diary diary) {
-        List<DiaryContent> diaryContents = new ArrayList<>();
-        int index = 0;
-
-        while (index < 3) {
-            diaryContents.add(DiaryContent.of(index + 1, String.valueOf(index), diary));
-            index++;
-        }
-        diaryContentRepository.saveAll(diaryContents);
-    }
-
-    private void createComment(Member member, Diary diary) {
-        commentRepository.save(
-                Comment.builder()
-                        .xCoordinate(123.45)
-                        .yCoordinate(333.33)
-                        .page(1)
-                        .content("댓글")
-                        .member(member)
-                        .diary(diary)
-                        .build()
-        );
+    private Comment createComment(double xCoordinate, double yCoordinate, int page, String content, GroupMember groupMember, Diary diary) {
+        Comment comment = Comment.of(xCoordinate, yCoordinate, page, content, groupMember, diary);
+        return commentRepository.save(comment);
     }
 }
